# qracer

./: .gitignore  AGENTS.md  HEARTBEAT.md  README.md  pyproject.toml
.github/workflows/: notify-qracer-bot.yml  validate.yml
docs/: architecture.md  autonomous-mode.md  conversational-layer.md  memory-system.md  pipeline.md  risk-system.md  schedule.md  serve.md  user-experience.md  workspace.md
docs/contrib/: docs-rules.md  skills-rules.md
qracer/: alert_monitor.py  alerts.py  autonomous.py  backtest.py  cli.py  provider_catalog.py  provider_lifecycle.py  server.py  task_executor.py  tasks.py  watchlist.py
qracer/agents/: analyst.py  base.py  researcher.py  strategist.py
qracer/config/: loader.py  models.py
qracer/conversation/: context_store.py  dispatcher.py  engine.py  handlers.py  quickpath.py  report_exporter.py  synthesizer.py  topic_resolver.py
qracer/dashboard/: app.py  dashboard.tcss  panels.py  sidebar.py
qracer/data/: __init__.py  finnhub_adapter.py  finnhub_ws.py  providers.py  registry.py
qracer/llm/: __init__.py  claude_adapter.py  gemini_adapter.py  openai_adapter.py
qracer/memory/: __init__.py  fact_models.py  fact_store.py  finding_extractor.py  memory_file.py  memory_searcher.py
qracer/models/: base.py
qracer/notifications/: __init__.py  factory.py  providers.py  telegram_adapter.py  telegram_poller.py
qracer/risk/: __init__.py  calculator.py  correlation.py  models.py
qracer/tools/: pipeline.py
qracer/web/: __init__.py  app.py  routes.py
skills/add-data-provider/: SKILL.md
skills/add-llm-provider/: SKILL.md
src/qracer/: __init__.py  alert_monitor.py  alerts.py  cli.py  pidfile.py  provider_catalog.py  server.py  tasks.py
src/tracer/: cli.py
tests/: conftest.py  helpers.py  test_alert_monitor.py  test_alerts.py  test_autonomous.py  test_backtest.py  test_cli.py  test_pidfile.py  test_provider_catalog.py  test_provider_lifecycle.py  test_server.py  test_task_executor.py  test_tasks.py  test_watchlist.py
tests/agents/: test_agents.py
tests/cli/: test_cli.py
tests/config/: test_loader.py
tests/conversation/: test_context.py  test_context_store.py  test_engine.py  test_intent.py  test_portfolio_check.py  test_quickpath.py  test_report_exporter.py  test_topic_resolver.py
tests/dashboard/: test_app.py  test_dashboard.py  test_panels.py
tests/data/: test_finnhub_adapter.py  test_finnhub_ws.py  test_fred_adapter.py  test_providers.py  test_registry.py
tests/llm/: test_claude_adapter.py  test_providers.py  test_registry.py
tests/memory/: test_fact_store.py  test_finding_extractor.py  test_memory_file.py  test_memory_searcher.py  test_session_compactor.py  test_session_logger.py
tests/models/: test_base.py
tests/notifications/: test_factory.py  test_providers.py  (+3 more)
(+94 files in other folders)
