[project]
name = "tracer"
version = "0.1.0"
description = "Conversational investment agent for discovering alpha in global security markets"
requires-python = ">=3.12"
dependencies = [
  "yfinance>=0.2.0",
]

[dependency-groups]
dev = [
  "ruff>=0.9.0",
  "pyright>=1.1.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
